# opentui

./: Cargo.toml  README.md
src/: app.rs  chat.rs  config.rs  dev_mode.rs  main.rs
src/providers/: anthropic.rs  deepseek.rs  google.rs  groq.rs  mistral.rs  mod.rs  nvidia.rs  openai.rs
src/ui/: chat_screen.rs  mod.rs  settings_screen.rs
src/web/: index.html
