[package]
name = "opentui"
version = "0.1.0"
edition = "2021"
description = "A stunning terminal AI chat interface for multiple AI providers - lightweight alternative to Open Web UI"
authors = ["opentui team"]
license = "MIT"
repository = "https://github.com/rashmina-a/opentui"
homepage = "https://github.com/rashmina-a/opentui"
keywords = ["tui", "ai", "chat", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config paths
dirs = "5"

# Async trait support
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Date/time
chrono = "0.4"

# Streaming SSE parsing
eventsource-stream = "0.2"

# Web server for settings UI
warp = "0.3"

# Base64 encoding for images
base64 = "0.22"

[[bin]]
name = "opentui"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
